# uplite-rust

./: Cargo.toml  LICENSE  readme.md
public/: styles.css
src/: main.rs
templates/: confirm-delete.html  index.html  info.html
