[package]
name = "uplite"
version = "0.1.0"
edition = "2024"
authors = ["Lucian <neuraluc@gmail.com>"]
description = "a lightweight, self-hosted file upload, browsing, and management tool"
categories = [
  "command-line-utilities",
  "development-tools::command-line",
  "web-programming",
  "network-programming"
]
keywords = [
  "cli",
  "file-sharing",
  "file-upload",
  "uplite",
  "secure",
  "lightweight",
  "actix",
  "rust",
  "embedded",
  "server",
  "template",
  "basic-auth",
  "file-management",
  "command-line",
  "rust-embed"
]
license = "MIT"
readme = "readme.md"

homepage = "https://github.com/gni/uplite-rust"
repository = "https://github.com/gni/uplite-rust"

[dependencies]
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4.9.0"
base64 = "0.22.1"
clap = { version = "4.5.31", features = ["derive"] }
env_logger = "0.11.6"
futures-util = "0.3.31"
hostname = "0.4.0"
mime_guess = "2.0.5"
rand = "0.9.0"
regex = "1.11.1"
rust-embed = "8.6.0"
serde_json = "1.0.139"
tera = "1.20.0"
urlencoding = "2.1.3"
